--- a/style.css
+++ b/style.css
@@ -208,17 +208,437 @@ div.showcase__content {
     transform-origin: left;
 }
 
+section#work {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2rem;
+    background-color: var(--tertiary-color);
+}
+div.work__card {
+    padding: 2rem;
+    flex-basis: 40rem;
+    flex-grow: 1;
 
+    clip-path: polygon(20% 0, 80% 0, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0 80%, 0 20%);
+}
+div.work__card img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+    transition: all 0.45s;
+}
+div.work__card img:hover,
+div.work__card img:active {
+    filter: sepia(80%);
+}
+
+section#about-me {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem;
+    background-color: var(--secondary-color);
+}
+
+.about-me__img,
+.about-me__content {
+    flex-basis: 40rem;
+    padding: 2rem;
+    flex-grow: 1;
+}
+.about-me__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.about-me__content--title {
+    font-size: 4rem;
+    padding: 1rem 0;
+    color: white;
+    text-transform: uppercase;
+    position: relative;
+}
+.about-me__content--title::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 0.3rem;
+    width: 10%;
+    background-color: var(--primary-color);
+}
+.about-me__content--title,
+.about-me__content--para {
+    margin-bottom: 4rem;
+    letter-spacing: 0.2rem;
+}
+.about-me__content--para {
+    font-size: 1.8rem;
+    font-family: 'Indie Flower', cursive;
+}
+.about-me__content--link:link,
+.about-me__content--link:visited {
+    padding: 1rem 0;
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: 0.2rem;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 1;
+}
+.about-me__content--link:link::after,
+.about-me__content--link:visited::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-color);
+    transform: scaleY(0);
+    transform-origin: bottom;
+    transition: all 0.45s;
+    z-index: -1;
+}
+.about-me__content--link:hover::after,
+.about-me__content--link:active::after {
+    transform: scaleY(1);
+    transform-origin: top;
+}
+
+section#services {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 6rem 2rem 2rem;
+    background-color: var(--primary-color);
+}
+.service {
+    padding: 4rem;
+    margin: 0 2rem 4rem;
+    flex-basis: 40rem;
+    flex-grow: 1;
+    background-color: var(--secondary-color);
+    border-bottom: 0.2rem solid var(--secondary-color);
+    border-right: 0.2rem solid var(--secondary-color);
+    border-left: 0.2rem solid var(--secondary-color);
+    position: relative;
+    z-index: 1;
+}
+.service::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--primary-color);
+    transform: scaleX(0);
+    transition: all 0.45s cubic-bezier(1, 0, 0, 1);
+    z-index: -1;
+}
+.service:hover::after,
+.service:active::after {
+    transform: scaleX(1);
+}
+
+.service i,
+.services--title {
+    margin-bottom: 2rem;
+    font-size: 3rem;
+
+}
+.service i {
+    color: white;
+}
+.services--title {
+    text-transform: uppercase;
+}
+.services--para {
+    font-family: 'Indie Flower', cursive;
+    font-size: 2rem;
+    color: white;
+}
+
+section#skills {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+    padding: calc(1rem + 2vw);
+    background-color: var(--tertiary-color);
+}
+
+.skills__design,
+.skills__coding {
+    padding: calc(1rem + 2vw);
+    flex-basis: 40rem;
+    flex-grow: 1;
+}
+
+.skills__design--title,
+.skills__coding--title {
+    font-size: 3rem;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+}
+
+.skills__design h4,
+.skills__coding h4 {
+    font-size: 2rem;
+    color: white;
+}
+
+.skills__design--progress,
+.skills__coding--progress {
+    position: relative;
+    display: block;
+    padding: 0.5rem;
+    border-radius: 3rem;
+    background-color: var(--primary-color);
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
+.skills__design--progress span,
+.skills__coding--progress span {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    height: 2rem;
+    border-radius: 1rem 0 0 1rem;
+    background-color: var(--secondary-color);
+}
+
+.skills__design--progress__1 {
+    animation: design-1 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-1 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 80%;
+    }
+}
+
+.skills__design--progress__2 {
+    animation: design-2 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-2 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 75%;
+    }
+}
+
+.skills__design--progress__3 {
+    animation: design-3 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-3 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 95%;
+    }
+}
+
+.skills__design--progress__4 {
+    animation: design-4 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-4 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 65%;
+    }
+}
+
+.skills__coding--progress__1 {
+    animation: coding-1 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-1 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 95%;
+    }
+}
+
+.skills__coding--progress__2 {
+    animation: coding-2 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-2 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 80%;
+    }
+}
+
+.skills__coding--progress__3 {
+    animation: coding-3 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-3 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 65%;
+    }
+}
+
+.skills__coding--progress__4 {
+    animation: coding-4 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-4 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 90%;
+    }
+}
+
+section#testimonials {
+    padding: calc(1rem + 2vw);
+    background-color: var(--secondary-color);
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.testimonials__card {
+    padding: 2vw;
+    flex-basis: 50rem;
+    flex-grow: 1;
+    position: relative;
+    overflow: hidden;
+}
+.testimonials__card--img {
+    height: 100%;
+    width: 100%;
+}
+
+.testimonials__card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.35s ease-in-out;
+}
+
+.testimonials__card--content__title {
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+}
+.testimonials__card--content__para {
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.5rem;
+}
+.testimonials__card--content {
+    position: absolute;
+    top: 60%;
+    left: 0;
+    width: 80%;
+    background-color: var(--tertiary-color-m);
+    padding: 1.5rem;
+
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: all 0.35s ease-in-out;
+}
+
+.testimonials__card:hover .testimonials__card--content {
+    transform: scaleY(1);
+
+}
+
+section#contact {
+   height: 100vh;
+    background-image: url("img/full-bg-03.jpg");
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+.contact__form {
+    flex-basis: 40rem;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--tertiary-color-m);
+}
+.contact__form input,
+.contact__form textarea {
+    color: white;
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.5rem;
+    letter-spacing: 0.2rem;
+    padding: 2rem;
+    background: transparent;
+    border: none;
+    border-bottom: var(--secondary-color) solid 0.1rem;
+}
+.contact__form textarea {
+    height: 30vh;
+}
+input[type=submit] {
+    border: none;
+    cursor: pointer;
+}
+
+
+
+
+
+
+@media screen and (min-width: 1510px) {
+    body {
+        width: 1510px;
+        margin: 0 auto;
+    }
+}
+
+/*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* (max-width:900px) Mark *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
 @media screen and (max-width: 900px) {
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Showcase / Hero Section *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
     section#showcase {
         background-position: 100%;
         align-items: flex-end;
     }
 }
 
-
-
+/*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* (max-width:610px) Mark *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
 @media screen and (max-width: 610px) {
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Main Nav Header *-*-*-*-**-*-*-*-**-*-*-*-**-*/
     header#header {
         position: absolute;
     }
@@ -234,7 +654,7 @@ div.showcase__content {
     }
 
     .clicked {
-       left: 55%;
+        left: 55%;
     }
 
     .header__main-nav--hamburger {
@@ -252,11 +672,13 @@ div.showcase__content {
         flex-direction: column;
         justify-content: space-around;
     }
+
     .line {
         width: 100%;
-        height: 0.3rem;background-color: white;
+        height: 0.3rem;
+        background-color: white;
         border-radius: 0.2rem;
-        transition: all 0.4s;
+        transition: all 0.4s ease-in-out;
     }
 
     ul.header__main-nav--links {
@@ -269,13 +691,16 @@ div.showcase__content {
         margin-bottom: 4vh;
         margin-left: 6vw;
     }
-    .clicked  .line-1 {
+
+    .clicked .line-1 {
         transform: rotateZ(-405deg) translate(-0.8rem, 0.6rem);
     }
-    .clicked  .line-2 {
+
+    .clicked .line-2 {
         opacity: 0;
     }
-    .clicked  .line-3 {
+
+    .clicked .line-3 {
         transform: rotateZ(405deg) translate(-0.8rem, -0.6rem);
     }
 
@@ -286,30 +711,89 @@ div.showcase__content {
     ul.header__main-nav--links li:nth-child(1) {
         transition: all 0.5s ease-in-out 0.2s;
     }
+
     ul.header__main-nav--links li:nth-child(2) {
         transition: all 0.5s ease-in-out 0.4s;
     }
+
     ul.header__main-nav--links li:nth-child(3) {
         transition: all 0.5s ease-in-out 0.6s;
     }
+
     ul.header__main-nav--links li:nth-child(4) {
         transition: all 0.5s ease-in-out 0.8s;
     }
+
     ul.header__main-nav--links li:nth-child(5) {
         transition: all 0.5s ease-in-out 1s;
     }
+
     ul.header__main-nav--links li:nth-child(6) {
         transition: all 0.5s ease-in-out 1.2s;
     }
+
     ul.header__main-nav--links li.fade {
         opacity: 1;
     }
 
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Showcase / Hero Section *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
     section#showcase {
         background-position: 80%;
     }
+
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Services Section *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Skills Section *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Testimonials Section *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
+    section#services {
+        padding: 6rem 3rem 2rem;
+    }
+
+    .service {
+        padding: calc(1rem + 2vw);
+        margin: 0 0 calc(1rem + 2vw);
+    }
+
+    .services--title,
+    .skills__design--title,
+    .skills__coding--title,
+    .testimonials__card--content__title {
+        font-size: calc(1.2rem + 2vw);
+    }
+
+    .services--para,
+    .skills__design h4,
+    .skills__coding h4,
+    .testimonials__card--content__para {
+        font-size: calc(0.8rem + 1.5vw);
+    }
 }
 
+/*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* (max-width:460px) Mark *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
+
+@media screen and (max-width: 460px) {
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Testimonials Section *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
+    .testimonials__card--content {
+        top: 0;
+        height: 100%;
+        width: 100%;
+        /* transform: scaleY(0); */
+        transform-origin: bottom;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+
+    .testimonials__card:hover .testimonials__card--content,
+    .testimonials__card:active .testimonials__card--content {
+        transform-origin: top;
+    }
+
+    /*-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-* Contact Section *-*-*-*-**-*-*-*-**-*-*-*-**-*-*-*-*/
+    section#contact {
+        background-position: 15% 5%;
+    }
+}
 
 
 
